--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -19,6 +19,9 @@
 -->
 <resources>
 
+    <!-- Height of the status bar -->
+    <dimen name="status_bar_height_default">32.0dip</dimen>
+
     <!-- Height of the status bar in portrait -->
     <dimen name="status_bar_height_portrait">32.0dip</dimen>
 
