RMX1971: Add Overlay for Smart Charging
Signed-off-by: kssrao13882 <kssrao13882@gmail.com>

--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -28,4 +28,7 @@
     <string name="config_batteryCalculatedCapacity">/sys/class/power_supply/battery/charge_counter</string>
     <bool name="config_supportBatteryHealth">true</bool>
 
+<!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">true</bool>
+
 </resources>
